--- a/src/app/app.html
+++ b/src/app/app.html
@@ -231,7 +231,7 @@
         </defs>
       </svg>
       <h1>Hello, {{ title() }}</h1>
-      <p>Congratulations! Your app is runningooooooooooooooooooo. 🎉</p>
+      <p>Congratulations! Your app is correr. 🎉</p>
     </div>
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
