--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,6 @@
-<router-outlet></router-outlet>
+<div>
+    @if (auth.token()) {
+        <app-navbar></app-navbar>
+    }
+    <router-outlet></router-outlet>
+</div>
