arreglado error de token y add guards

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,9 +1,10 @@
 <div>
-    @if (auth.token()) {
+    @if (auth.token() && auth.currentUser()) {
     <app-navbar></app-navbar>
-
     }
 
+    @if (!auth.isLoading()) {
     <router-outlet></router-outlet>
+    }
     
 </div>
