--- a/src/app/components/navbar.component/navbar.component.html
+++ b/src/app/components/navbar.component/navbar.component.html
@@ -1,3 +1,4 @@
+@if (perfil()) {
 <nav class="navbar navbar-expand-lg custom-navbar px-4">
   <div class="container-fluid">
 
@@ -38,7 +39,7 @@
             <div class="user-icon-circle me-3">
               <i class="bi bi-person"></i>
             </div>
-            <span class="user-name-text">{{perfil.nombre}}</span>
+            <span class="user-name-text">{{perfil()!.nombre}}</span>
           </a>
 
           <ul class="dropdown-menu dropdown-menu-end custom-dropdown-menu p-3 shadow">
@@ -59,3 +60,4 @@
     </div>
   </div>
 </nav>
+}
